# poseidon-hash-wasm

./: .gitignore  Cargo.toml  LICENSE  index.d.ts  index.js  index.mjs  package.json  release
.github/workflows/: publish-npmjs.yml  unit-tests.yml
src/: lib.rs
tests/: benchmark.js  nodejs.test.js
