[package]
name = "poseidon-hash-wasm"
version = "0.1.0"
authors = ["RAILGUN Contributors"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.63"
rs-poseidon = { git = "https://github.com/codex-storage/rs-poseidon.git" }
ruint = { version = "1.7.0", features = ["serde", "num-bigint", "ark-ff"] }
wasm-bindgen = "0.2.86"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
